# 30-seconds-app-starter-collections

./: LICENSE  README.md
examples/actix/api-gateway/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/actix/api-gateway/hello_service/: Cargo.toml  Dockerfile
examples/actix/api-gateway/hello_service/src/: main.rs
examples/actix/api-gateway/src/: gateway.rs  lib.rs  main.rs  rest.rs  schemas.rs  store_interface.rs
examples/actix/api-gateway/src/stores/: cache.rs  config.rs  http.rs  postgres.rs
examples/actix/todolist-app/: Cargo.toml  Dockerfile  docker-compose.yml
examples/actix/todolist-app/src/: main.rs  rest.rs  schemas.rs  store_interface.rs  test_rest.rs
examples/actix/todolist-app/src/stores/: memory.rs  postgres.rs  test_memory.rs
examples/actix/todolist-app/tests/: integration_tests.rs
examples/actix/websocket-service/: Cargo.toml
examples/actix/websocket-service/src/: main.rs  server.rs  session.rs
examples/axum/api-gateway/: Cargo.toml  Dockerfile  docker-compose.yml  routes.yml
examples/axum/api-gateway/hello_service/src/: main.rs
examples/axum/api-gateway/src/: gateway.rs  main.rs  rest.rs  schemas.rs  store_interface.rs
examples/axum/api-gateway/src/stores/: cache.rs  config.rs  http.rs  postgres.rs
examples/axum/todolist-app/: Cargo.toml
