[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.4"
actix-web = "4.4"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
async-trait = "0.1"
rstest = "0.18"
async-std = { version = "1.12", features = ["attributes"] }
coi = "0.10"
coi-actix-web = "0.7"
deadpool-postgres = {version = "0.7"}
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
reqwest = {version = "0.11", features = ["blocking"] }
jwt-simple = "0.11"
sha2 = "0.10"
hmac = "0.12"
bytes = "1.5"
uuid = {version = "1.4", features=["v4", "fast-rng"]}
lazy_static = "1.4"
