[package]
name = "websocket-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
serde = {version ="1.0.188", features=["derive"]}
uuid = {version="1.4.1", features=["v4", "serde"]}
