[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6", features=["headers"]}
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
async-trait = "0.1"
rstest = "0.18"
async-std = { version = "1.11", features = ["attributes"] }
deadpool-postgres = {version = "0.7"}
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
reqwest = {version = "0.11", features = ["blocking"] }
jwt-simple = "0.11"
bytes = "1.5"
uuid = {version = "1.4", features=["v4", "fast-rng"]}
lazy_static = "1.4"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
axum-macros = "0.3"